--- a/application/index/view/blueprint/blueprint-infos.html
+++ b/application/index/view/blueprint/blueprint-infos.html
@@ -5,182 +5,182 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">明细编号</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input" title="无法编辑" value="{$blueprintInfo.drawing_detail_id}" disabled>
+                    <input type="text" class="layui-input" title="无法编辑" value="{$blueprintInfo.drawing_detail_id}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">公司编号</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input" title="无法编辑" value="{$blueprintInfo.drawing_internal_id}" disabled>
+                    <input type="text" class="layui-input" title="无法编辑" value="{$blueprintInfo.drawing_internal_id}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">外图编号</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input" value="{$blueprintInfo.drawing_externa_id}" disabled>
+                    <input type="text" class="layui-input" value="{$blueprintInfo.drawing_externa_id}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">图纸名称</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input" value="{$blueprintInfo.drawing_name}" disabled>
+                    <input type="text" class="layui-input" value="{$blueprintInfo.drawing_name}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">材料类型</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input" value="{$blueprintInfo.material}" disabled>
+                    <input type="text" class="layui-input" value="{$blueprintInfo.material}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">热处理类型</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input" value="{$blueprintInfo.heat_treatment}" disabled>
+                    <input type="text" class="layui-input" value="{$blueprintInfo.heat_treatment}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">图纸类型</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input" value="{$blueprintInfo.drawing_type}" disabled>
+                    <input type="text" class="layui-input" value="{$blueprintInfo.drawing_type}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">客户类型</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input" value="{$blueprintInfo.client_id}" disabled>
+                    <input type="text" class="layui-input" value="{$blueprintInfo.client_id}"  >
                 </div>
             </div>
             <!--<div class="layui-form-item">-->
                 <!--<label class="layui-form-label">是否批量</label>-->
                 <!--<div class="layui-input-block">-->
-                    <!--<input type="text" class="layui-input" value="{$blueprintInfo.if_batch}" disabled>-->
+                    <!--<input type="text" class="layui-input" value="{$blueprintInfo.if_batch}"  >-->
                 <!--</div>-->
             <!--</div>-->
             <div class="layui-form-item">
                 <label class="layui-form-label">是否批量</label>
                 <div class="layui-input-block">
-                    <input type="checkbox" checked="" name="open" lay-skin="switch" lay-filter="switchTest" lay-text="是|否" disabled>
+                    <input type="checkbox" checked="" name="open" lay-skin="switch" lay-filter="switchTest" lay-text="是|否"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">材料形状</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input" value="{$blueprintInfo.material_type}" disabled>
+                    <input type="text" class="layui-input" value="{$blueprintInfo.material_type}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">厚度</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input" value="{$blueprintInfo.thickness_Dia}" disabled>
+                    <input type="text" class="layui-input" value="{$blueprintInfo.thickness_Dia}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">长度尺寸</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input" value="{$blueprintInfo.length_dim}" disabled>
+                    <input type="text" class="layui-input" value="{$blueprintInfo.length_dim}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">宽度尺寸</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input" value="{$blueprintInfo.width_dim}" disabled>
+                    <input type="text" class="layui-input" value="{$blueprintInfo.width_dim}"  >
                 </div>
             </div>
             <!--<div class="layui-form-item">-->
                 <!--<label class="layui-form-label">保证厚度</label>-->
                 <!--<div class="layui-input-block">-->
-                    <!--<input type="text" class="layui-input" value="{$blueprintInfo.if_thickness}" disabled>-->
+                    <!--<input type="text" class="layui-input" value="{$blueprintInfo.if_thickness}"  >-->
                 <!--</div>-->
             <!--</div>-->
             <!--<div class="layui-form-item">-->
                 <!--<label class="layui-form-label">保证长度</label>-->
                 <!--<div class="layui-input-block">-->
-                    <!--<input type="text" class="layui-input" value="{$blueprintInfo.if_length}" disabled>-->
+                    <!--<input type="text" class="layui-input" value="{$blueprintInfo.if_length}"  >-->
                 <!--</div>-->
             <!--</div>-->
             <!--<div class="layui-form-item">-->
                 <!--<label class="layui-form-label">保证宽度</label>-->
                 <!--<div class="layui-input-block">-->
-                    <!--<input type="text" class="layui-input" value="{$blueprintInfo.if_width}" disabled>-->
+                    <!--<input type="text" class="layui-input" value="{$blueprintInfo.if_width}"  >-->
                 <!--</div>-->
             <!--</div>-->
             <div class="layui-form-item">
                 <label class="layui-form-label">保证厚度</label>
                 <div class="layui-input-block">
-                    <input type="checkbox" checked="" name="open" lay-skin="switch" lay-filter="switchTest" lay-text="是|否" disabled>
+                    <input type="checkbox" checked="" name="open" lay-skin="switch" lay-filter="switchTest" lay-text="是|否"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">保证长度</label>
                 <div class="layui-input-block">
-                    <input type="checkbox" checked="" name="open" lay-skin="switch" lay-filter="switchTest" lay-text="是|否" disabled>
+                    <input type="checkbox" checked="" name="open" lay-skin="switch" lay-filter="switchTest" lay-text="是|否"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">保证宽度</label>
                 <div class="layui-input-block">
-                    <input type="checkbox" checked="" name="open" lay-skin="switch" lay-filter="switchTest" lay-text="是|否" disabled>
+                    <input type="checkbox" checked="" name="open" lay-skin="switch" lay-filter="switchTest" lay-text="是|否"  >
                 </div>
             </div>
 
             <div class="layui-form-item">
                 <label class="layui-form-label">排料数量</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input" value="{$blueprintInfo.layout_qty}" disabled>
+                    <input type="text" class="layui-input" value="{$blueprintInfo.layout_qty}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">材料要求</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input" value="{$blueprintInfo.material_requirements}" disabled>
+                    <input type="text" class="layui-input" value="{$blueprintInfo.material_requirements}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">产品加工费</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input" value="{$blueprintInfo.product_mfg_cost}" disabled>
+                    <input type="text" class="layui-input" value="{$blueprintInfo.product_mfg_cost}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">产品报价</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input" value="{$blueprintInfo.product_quotation}" disabled>
+                    <input type="text" class="layui-input" value="{$blueprintInfo.product_quotation}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">产品实价</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input" value="{$blueprintInfo.product_real_price}" disabled>
+                    <input type="text" class="layui-input" value="{$blueprintInfo.product_real_price}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">创建人</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input" value="{$blueprintInfo.create_name}" disabled>
+                    <input type="text" class="layui-input" value="{$blueprintInfo.create_name}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">最后修改人</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input" value="{$blueprintInfo.modify_name}" disabled>
+                    <input type="text" class="layui-input" value="{$blueprintInfo.modify_name}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">创建时间</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input" value="{$blueprintInfo.create_time}" disabled>
+                    <input type="text" class="layui-input" value="{$blueprintInfo.create_time}"  >
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">修改时间</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input" value="{$blueprintInfo.update_time}" disabled>
+                    <input type="text" class="layui-input" value="{$blueprintInfo.update_time}"  >
                 </div>
             </div>
             <div class="layui-form-item layui-form-text">
                 <label class="layui-form-label">备注</label>
                 <div class="layui-input-block">
-                    <textarea class="layui-textarea" disabled> {$blueprintInfo.remark} </textarea>
+                    <textarea class="layui-textarea"  > {$blueprintInfo.remark} </textarea>
                 </div>
             </div>
 
