完善外图信息，添加外图增加界面，添加明细增加界面

--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -107,6 +107,12 @@
                             <cite>外部图纸</cite>
                         </a>
                     </li >
+                    <li>
+                        <a _href="{:url('index/blueprint/test')}">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>test</cite>
+                        </a>
+                    </li >
                 </ul>
             </li>
             <li>
