--- a/application/index/view/blueprint/blueprint-info.html
+++ b/application/index/view/blueprint/blueprint-info.html
@@ -15,7 +15,36 @@
 <div class="x-body">
   <xblock>
     <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>&nbsp;&nbsp;&nbsp;&nbsp;
-    <div class="layui-input-inline"><input type="tel" id="findText" lay-verify="required|phone" autocomplete="off" placeholder="请输入关键字..." class="layui-input"></div>
+    <div class="layui-input-inline">
+      <!--<input type="tel" id="findText" lay-verify="required|phone" autocomplete="off" placeholder="请输入关键字..." class="layui-input">-->
+      <form class="layui-form" action="">
+        <div class="layui-input-inline">
+          <select name="modules" lay-verify="required" lay-search="" id="findText">
+            <option value="">请输入关键字...</option>
+
+            <optgroup label="外图明细">
+              {volist name="$blueprintInfo" id="blueprintInfoList"}
+              <option value="{$blueprintInfoList.drawing_detail_id}">{$blueprintInfoList.drawing_detail_id}</option>
+              {/volist}
+            </optgroup>
+
+            <optgroup label="公司编号">
+              {volist name="$blueprintInfo" id="blueprintInfoList"}
+              <option value="{$blueprintInfoList.drawing_internal_id}">{$blueprintInfoList.drawing_internal_id}</option>
+              {/volist}
+            </optgroup>
+
+            <optgroup label="外图编号">
+              {volist name="$blueprintInfo" id="blueprintInfoList"}
+              <option value="{$blueprintInfoList.drawing_externa_id}">{$blueprintInfoList.drawing_externa_id}</option>
+              {/volist}
+            </optgroup>
+
+
+          </select>
+        </div>
+      </form>
+    </div>
     <button class="layui-btn"  lay-submit="" lay-filter="sreach" id="find"><i class="layui-icon">&#xe615;</i></button>
     <script>
       $(function () {
