--- a/application/index/view/blueprint/blueprint-infos.html
+++ b/application/index/view/blueprint/blueprint-infos.html
@@ -184,7 +184,12 @@
                 </div>
             </div>
 
-
+            <div class="layui-form-item">
+                <label for="L_repass" class="layui-form-label"></label>
+                <button  class="layui-btn">
+                    确认修改
+                </button>
+            </div>
       </form>
     </div>
     <script>
