--- a/application/index/view/blueprint/add-drawing-externa.html
+++ b/application/index/view/blueprint/add-drawing-externa.html
@@ -46,7 +46,7 @@
           form.on('submit(addId)', function(data){
             //console.log(data);
               $.post("{:url('index/Blueprint/addDrawingExternalId')}",data.field,function(info){
-                  if(info == 1){
+                  if (info) {
                       layer.alert("添加成功", {icon: 6},function () {
                           window.parent.location.reload();  //刷新父级页面
                           // 获得frame索引
