--- a/application/index/view/blueprint/blueprint-info.html
+++ b/application/index/view/blueprint/blueprint-info.html
@@ -88,7 +88,7 @@
       {volist name="$blueprintInfo" id="blueprintInfoList"}
       <tr>
         <td>
-          <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='2'><i class="layui-icon">&#xe605;</i></div>
+          <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='{$blueprintInfoList.Id}'><i class="layui-icon">&#xe605;</i></div>
         </td>
         <td>{$blueprintInfoList.drawing_detail_id}</td>
         <td>{$blueprintInfoList.drawing_internal_id}</td>
@@ -146,10 +146,21 @@
 
           var data = tableCheck.getData();
 
-          layer.confirm('确认要删除吗？'+data,function(index){
+          layer.confirm('确认要删除吗？',function(index){
               //捉到所有被选中的，发异步进行删除
-              layer.msg('删除成功', {icon: 1});
-              $(".layui-form-checked").not('.header').parents('tr').remove();
+              $.ajax({
+                  url:"/index/index/delall",
+                  type:"POST",
+                  dataType:"json",
+                  data:{
+                      table:"hy_drawing_detial",  //表名
+                      data:data   //数据
+                  },
+                  success:function (res) {
+                      layer.msg(res.message, {icon: 1});
+                      $(".layui-form-checked").not('.header').parents('tr').remove();
+                  },
+              });
           });
       }
   </script>
