--- a/application/index/view/blueprint/blueprint-info.html
+++ b/application/index/view/blueprint/blueprint-info.html
@@ -88,7 +88,7 @@
       {volist name="$blueprintInfo" id="blueprintInfoList"}
       <tr>
         <td>
-          <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='{$blueprintInfoList.Id}'><i class="layui-icon">&#xe605;</i></div>
+          <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='{$blueprintInfoList.id}'><i class="layui-icon">&#xe605;</i></div>
         </td>
         <td>{$blueprintInfoList.drawing_detail_id}</td>
         <td>{$blueprintInfoList.drawing_internal_id}</td>
