--- a/application/index/view/blueprint/blueprint-infos.html
+++ b/application/index/view/blueprint/blueprint-infos.html
@@ -4,7 +4,7 @@
         <form class="layui-form"  >
             <div class="layui-form-item">
                 <div class="layui-input-block">
-                    <input type="hidden" class="layui-input" name="id" title="无法编辑" value="{$blueprintInfo.Id}"  >
+                    <input type="hidden" class="layui-input" name="id" title="无法编辑" value="{$blueprintInfo.id}"  >
                 </div>
             </div>
 
