--- a/application/index/view/blueprint/blueprint-info.html
+++ b/application/index/view/blueprint/blueprint-info.html
@@ -17,11 +17,10 @@
     <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>&nbsp;&nbsp;&nbsp;&nbsp;
     <div class="layui-input-inline">
       <!--<input type="tel" id="findText" lay-verify="required|phone" autocomplete="off" placeholder="请输入关键字..." class="layui-input">-->
-      <form class="layui-form" action="">
+      <form class="layui-form" action="{:url('index/Blueprint/blueprintInfo')}" method="post">
         <div class="layui-input-inline">
           <select name="modules" lay-verify="required" lay-search="" id="findText">
             <option value="">请输入关键字...</option>
-
             <optgroup label="外图明细">
               {volist name="$blueprintInfo" id="blueprintInfoList"}
               <option value="{$blueprintInfoList.drawing_detail_id}">{$blueprintInfoList.drawing_detail_id}</option>
@@ -39,13 +38,12 @@
               <option value="{$blueprintInfoList.drawing_externa_id}">{$blueprintInfoList.drawing_externa_id}</option>
               {/volist}
             </optgroup>
-
-
           </select>
         </div>
+        <button type="submit" class="layui-btn"  lay-submit="" lay-filter="sreach" id="find"><i class="layui-icon">&#xe615;</i></button>
       </form>
     </div>
-    <button class="layui-btn"  lay-submit="" lay-filter="sreach" id="find"><i class="layui-icon">&#xe615;</i></button>
+
     <script>
       $(function () {
           $("#find").click(function () {
