--- a/application/index/view/blueprint/blueprint-outside.html
+++ b/application/index/view/blueprint/blueprint-outside.html
@@ -49,7 +49,7 @@
             {volist name="$blueprintOutside" id="blueprintOutsideList"}
             <tr>
                 <td>
-                  <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='2'><i class="layui-icon">&#xe605;</i></div>
+                  <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='{$blueprintOutsideList.id}'><i class="layui-icon">&#xe605;</i></div>
                 </td>
                 <td>
                     <a title="序号#" onclick="x_admin_show('为外图 <span class=\'layui-badge layui-bg-blue\'>{$blueprintOutsideList.drawing_external_id}</span> 添加明细','{:url(\'index/blueprint/addDrawingDetial\', [\'id\' => $blueprintOutsideList.drawing_external_id])}',600)" href="javascript:;"><i class="layui-icon">{$blueprintOutsideList.drawing_external_id}</i></a>
@@ -97,8 +97,19 @@
         var data = tableCheck.getData();
         layer.confirm('确认要删除吗？'+data,function(index){
             //捉到所有被选中的，发异步进行删除
-            layer.msg('删除成功', {icon: 1});
-            $(".layui-form-checked").not('.header').parents('tr').remove();
+            $.ajax({
+                url:"/index/index/delall",
+                type:"POST",
+                dataType:"json",
+                data:{
+                    table:"hy_drawing_external",  //表名
+                    data:data   //数据
+                },
+                success:function (res) {
+                    layer.msg(res.message, {icon: 1});
+                    $(".layui-form-checked").not('.header').parents('tr').remove();
+                },
+            });
         });
       }
     </script>
