外图图纸删除事件更新（vclin）

--- a/application/index/view/blueprint/blueprint-interior.html
+++ b/application/index/view/blueprint/blueprint-interior.html
@@ -102,8 +102,19 @@
   
         layer.confirm('确认要删除吗？'+data,function(index){
             //捉到所有被选中的，发异步进行删除
-            layer.msg('删除成功', {icon: 1});
-            $(".layui-form-checked").not('.header').parents('tr').remove();
+            $.ajax({
+                url:"/index/index/delall",
+                type:"POST",
+                dataType:"json",
+                data:{
+                    table:"",  //表名
+                    data:data   //数据
+                },
+                success:function (res) {
+                    layer.msg(res.message, {icon: 1});
+                    $(".layui-form-checked").not('.header').parents('tr').remove();
+                },
+            });
         });
       }
     </script>
