--- a/application/index/view/blueprint/add-drawing-externa.html
+++ b/application/index/view/blueprint/add-drawing-externa.html
@@ -17,8 +17,7 @@
               </div>
           </div>
           <div class="layui-form-item">
-              <label class="layui-form-label">
-              </label>
+              <label class="layui-form-label"></label>
               <button class="layui-btn" lay-submit lay-filter="addId">
                   增加
               </button>
