--- a/application/index/view/blueprint/process.html
+++ b/application/index/view/blueprint/process.html
@@ -7,6 +7,7 @@
   <xblock>
     <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
     <button class="layui-btn" onclick="x_admin_show('工序信息','{:url(\'index/blueprint/addProcess\',[\'id\'=>$drawing_detail_id])}',500,500)"><i class="layui-icon"></i>添加</button>
+    <button class="layui-btn" onclick ="sort('{$drawing_detail_id}')" >一键排序</button>
     <span class="x-right" style="line-height:40px">共有数据：{$count} 条</span>
   </xblock>
   <div class="layui-row">
@@ -58,7 +59,7 @@
                 </div>
               </td>
               <td>
-                <a title="详" onclick="x_admin_show('工序明细 <span class=\'layui-badge layui-bg-blue\'></span> 的所有信息','{}',450)" href="javascript:;"><i class="layui-icon">详</i></a>
+                <a title="改" onclick="x_admin_show('工序明细 <span class=\'layui-badge layui-bg-blue\'>{$processInfoList.process_id}</span> 修改操作','{:url(\'index/blueprint/editProcess\',[\'id\'=>$processInfoList.id])}',450)" href="javascript:;"><i class="layui-icon">改</i></a>
                 <a title="删" onclick="x_admin_show('工序明细 <span class=\'layui-badge layui-bg-blue\'></span> 的所有信息','{}',450)" href="javascript:;"><i class="layui-icon">删</i></a>
               </td>
             </tr>
@@ -89,7 +90,19 @@
             }
         },"json")
     });
-
+    function sort(id) {
+        var url = "{:url('/index/Blueprint/onekeySort')}";
+        var postData ={"id":id};
+        $.post(url,postData,function (result) {
+            if(result === 1 ){
+                layer.alert("排序成功", {icon: 6},function () {
+                    window.location.reload();  //刷新父级页面
+                });
+            }else {
+                layer.alert("排序失败", {icon: 5});
+            }
+        },"json")
+    }
 </script>
 </body>
 </html>
