#完成工艺管理、优化自动排序算法。

--- a/application/index/view/blueprint/process.html
+++ b/application/index/view/blueprint/process.html
@@ -60,7 +60,7 @@
               </td>
               <td>
                 <a title="改" onclick="x_admin_show('工序明细 <span class=\'layui-badge layui-bg-blue\'>{$processInfoList.process_id}</span> 修改操作','{:url(\'index/blueprint/editProcess\',[\'id\'=>$processInfoList.id])}',450)" href="javascript:;"><i class="layui-icon">改</i></a>
-                <a title="删" onclick="x_admin_show('工序明细 <span class=\'layui-badge layui-bg-blue\'></span> 的所有信息','{}',450)" href="javascript:;"><i class="layui-icon">删</i></a>
+                <a title="删" onclick="delete_process(this,'{$processInfoList.id}')"><i class="layui-icon">删</i></a>
               </td>
             </tr>
           {/volist}
@@ -102,6 +102,22 @@
                 layer.alert("排序失败", {icon: 5});
             }
         },"json")
+    }
+
+    /*删除*/
+    function delete_process(obj,id){
+        layer.confirm('确认要删除吗？',function(index){
+            var url = "{:url('/index/Blueprint/deleteProcess')}";
+            var postData ={"id":id};
+            $.post(url,postData,function (result) {
+                if(result === 1 ){
+                    $(obj).parents("tr").remove();
+                    layer.msg('已删除!',{icon:1,time:1000});
+                }else {
+                    layer.alert("排序失败", {icon: 5});
+                }
+            },"json");
+        });
     }
 </script>
 </body>
