--- a/application/index/view/blueprint/process.html
+++ b/application/index/view/blueprint/process.html
@@ -38,7 +38,13 @@
               <td>
                 <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id=''><i class="layui-icon">&#xe605;</i></div>
               </td>
-              <td>{$processInfoList.process_id}</td>
+              <td>
+                {$processInfoList.process_id}
+                  <span class="layui-table-sort layui-inline">
+                    <i class="layui-edge layui-table-sort-asc" attr-id="{$processInfoList.id}" attr-drawing_detial_id="{$processInfoList.drawing_detial_id}"></i>
+                    <i class="layui-edge layui-table-sort-desc" attr-id="{$processInfoList.id}" attr-drawing_detial_id="{$processInfoList.drawing_detial_id}"></i>
+                  </span>
+              </td>
               <td>{$processInfoList.process_type}</td>
               <td>{$processInfoList.process_content}</td>
               <td>{$processInfoList.process_quota}</td>
@@ -74,6 +80,38 @@
   </div>
 </div>
 <script>
+    //往上走
+    $(".layui-table-sort-asc").click(function () {
+        var url = "{:url('/index/Blueprint/updateAsc')}";
+        var id = $(this).attr('attr-id');
+        var drawing_detial_id = $(this).attr('attr-drawing_detial_id');
+        var postData ={"id":id,"drawing_detial_id":drawing_detial_id};
+        $.post(url,postData,function (result) {
+              if(result.error === 1000 ){
+                  layer.msg(result.msg,{icon:5,time:1000});
+              }else if(result.error === 1) {
+                  window.location.reload();  //刷新父级页面
+              }else {
+                  layer.msg(result.msg,{icon:5,time:1000});
+              }
+        },"json");
+    });
+    //往下走
+    $(".layui-table-sort-desc").click(function () {
+        var url = "{:url('/index/Blueprint/updateDesc')}";
+        var id = $(this).attr('attr-id');
+        var drawing_detial_id = $(this).attr('attr-drawing_detial_id');
+        var postData ={"id":id,"drawing_detial_id":drawing_detial_id};
+        $.post(url,postData,function (result) {
+            if(result.error === 1000 ){
+                layer.msg(result.msg,{icon:5,time:1000});
+            }else if(result.error === 1) {
+                window.location.reload();  //刷新父级页面
+            }else {
+                layer.msg(result.msg,{icon:5,time:1000});
+            }
+        },"json");
+    });
     //排序
     $(".listorder input").blur(function () {
         var listorder =  $(this).val();
