--- a/application/index/view/blueprint/process.html
+++ b/application/index/view/blueprint/process.html
@@ -3,6 +3,53 @@
 <div class="x-body">
   <fieldset class="layui-elem-field layui-field-title" style="margin-top: 5px;">
     <legend>工艺信息</legend>
+    <div class="layui-row">
+      <div class="container-wrap">
+        <div class="box-1">
+          <table class="layui-table">
+            <thead>
+            <tr>
+              <th>明细编号</th>
+              <th>公司编号</th>
+              <th>外图编号</th>
+              <th>图纸名称</th>
+              <th>材料</th>
+              <th>类型</th>
+              <th>客户</th>
+              <th>批量</th>
+              <th>工费</th>
+              <th>报价</th>
+              <th>实际价格</th>
+              <th>操作</th>
+            </tr>
+            </thead>
+            <tbody>
+            {volist name="$blueprintInfo" id="blueprintInfoList"}
+            <tr>
+              <td>{$blueprintInfoList.drawing_detail_id}</td>
+              <td>{$blueprintInfoList.drawing_internal_id}</td>
+              <td>{$blueprintInfoList.drawing_externa_id}</td>
+              <td>{$blueprintInfoList.drawing_name}</td>
+              <td>{$blueprintInfoList.heat_treatment}</td>
+              <td>{$blueprintInfoList.drawing_type}</td>
+              <td>{$blueprintInfoList.client_id}</td>
+              <td>{$blueprintInfoList.if_batch}</td>
+              <td>{$blueprintInfoList.layout_qty}</td>
+              <td>{$blueprintInfoList.product_mfg_cost}</td>
+              <td>{$blueprintInfoList.product_quotation}</td>
+              <td class="td-manage">
+                <a title="详" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的所有信息','{:url(\'index/blueprint/blueprintInfos\',[\'id\'=>$blueprintInfoList.drawing_detail_id])}',450)" href="javascript:;"><i class="layui-icon">详</i></a>
+                <a title="外" onclick="x_admin_show('外','http://php.me/[爱，就注定了一生的漂泊].刘墉.扫描版.pdf')" href="javascript:;"><i class="layui-icon">外</i></a>
+                <a title="内" onclick="x_admin_show('内','http://php.me/超越平凡的平面设计+版式设计原理.pdf')" href="javascript:;"><i class="layui-icon">内</i></a>
+                <a title="程" onclick="x_admin_show('程','http://php.me/微交互  细节设计成就卓越产品.pdf')" href="javascript:;"><i class="layui-icon">程</i></a>
+              </td>
+            </tr>
+            {/volist}
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
   </fieldset>
   <xblock>
     <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
@@ -28,7 +75,6 @@
               <th>定额报价</th>
               <th>外协实际价格</th>
               <th>备注</th>
-              <th>排序</th>
               <th>操作</th>
             </tr>
           </thead>
@@ -39,13 +85,13 @@
                 <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id=''><i class="layui-icon">&#xe605;</i></div>
               </td>
               <td>
-                {$processInfoList.process_id}
+                <?php echo substr($processInfoList['process_id'],strpos($processInfoList['process_id'],'-')+1); ?>
                   <span class="layui-table-sort layui-inline">
                     <i class="layui-edge layui-table-sort-asc" attr-id="{$processInfoList.id}" attr-drawing_detial_id="{$processInfoList.drawing_detial_id}"></i>
                     <i class="layui-edge layui-table-sort-desc" attr-id="{$processInfoList.id}" attr-drawing_detial_id="{$processInfoList.drawing_detial_id}"></i>
                   </span>
               </td>
-              <td>{$processInfoList.process_type}</td>
+              <td>{$processInfoList.process_name} --- {$processInfoList.process_price}</td>
               <td>{$processInfoList.process_content}</td>
               <td>{$processInfoList.process_quota}</td>
               <td>
@@ -59,14 +105,11 @@
               <td>{$processInfoList.quota_quotation}</td>
               <td>{$processInfoList.process_real_price}</td>
               <td>{$processInfoList.remark}</td>
+
               <td>
-                <div class="layui-input-inline listorder" style="width: 50px;">
-                  <input type="text" value="{$processInfoList.sort}" size="3" attr-id="{$processInfoList.id}" class="layui-input"  name="listorder" >
-                </div>
-              </td>
-              <td>
-                <a title="改" onclick="x_admin_show('工序明细 <span class=\'layui-badge layui-bg-blue\'>{$processInfoList.process_id}</span> 修改操作','{:url(\'index/blueprint/editProcess\',[\'id\'=>$processInfoList.id])}',450)" href="javascript:;"><i class="layui-icon">改</i></a>
-                <a title="删" onclick="delete_process(this,'{$processInfoList.id}')"><i class="layui-icon">删</i></a>
+                <!--<a title="详" onclick="x_admin_show('工序详情 <span class=\'layui-badge layui-bg-blue\'>{$processInfoList.process_id}</span> 修改操作','{:url(\'index/blueprint/editProcess\',[\'id\'=>$processInfoList.id])}',450)" href="javascript:;"><i class="layui-icon">详</i></a>-->
+                <a title="改" onclick="x_admin_show('修改工序 <span class=\'layui-badge layui-bg-blue\'>{$processInfoList.process_id}</span> 修改操作','{:url(\'index/blueprint/editProcess\',[\'id\'=>$processInfoList.id])}',450)" href="javascript:;"><i class="layui-icon">改</i></a>
+                <a title="删" onclick="delete_process(this,'{$processInfoList.id}','{$processInfoList.drawing_detial_id}')"><i class="layui-icon">删</i></a>
               </td>
             </tr>
           {/volist}
@@ -112,6 +155,7 @@
             }
         },"json");
     });
+
     //排序
     $(".listorder input").blur(function () {
         var listorder =  $(this).val();
@@ -143,16 +187,17 @@
     }
 
     /*删除*/
-    function delete_process(obj,id){
+    function delete_process(obj,id,drawing_detial_id){
         layer.confirm('确认要删除吗？',function(index){
             var url = "{:url('/index/Blueprint/deleteProcess')}";
-            var postData ={"id":id};
+            var postData ={"id":id,"drawing_detial_id":drawing_detial_id};
             $.post(url,postData,function (result) {
                 if(result === 1 ){
-                    $(obj).parents("tr").remove();
-                    layer.msg('已删除!',{icon:1,time:1000});
+                    layer.alert("删除成功", {icon: 6},function () {
+                        window.location.reload();  //刷新父级页面
+                    });
                 }else {
-                    layer.alert("排序失败", {icon: 5});
+                    layer.alert("删除失败", {icon: 5});
                 }
             },"json");
         });
