--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -61,6 +61,7 @@
                     </li >
                 </ul>
             </li>
+
             <li>
                 <a href="javascript:;">
                     <i class="iconfont">&#xe6f6;</i>
@@ -72,6 +73,27 @@
                         <a _href="{:url('index/storehouse/delivery')}">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>发货出库</cite>
+                        </a>
+                    </li >
+                    <li>
+                        <a _href="{:url('index/storehouse/purchase')}">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>外购产品</cite>
+                        </a>
+                    </li >
+                </ul>
+            </li>
+            <li>
+                <a href="javascript:;">
+                    <i class="iconfont">&#xe6f6;</i>
+                    <cite>基础信息菜单</cite>
+                    <i class="iconfont nav_right">&#xe697;</i>
+                </a>
+                <ul class="sub-menu">
+                    <li>
+                        <a _href="{:url('index/ProcessType/index')}">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>工序类型管理</cite>
                         </a>
                     </li >
                     <li>
